--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,42 @@
 html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+/* Just cascade this if you need the bullet points*/
+ul {
+  list-style-type: none;
 }
 
 #main-container {
-    width: 50%;
-    margin: 0 auto;
+  width: 50%;
+  margin: 0 auto;
 }
 
+/* For the simple js gallery */
+#normal2, #normal3, #normal4, #normal5 {
+  display: none;
+}
+
+/* End section */
+
 #signup {
-    background-color: #001f3f
-    color:#eee;
+  background-color: #001f3f
+  color:#eee;
 }
 
 #members-information {
-    display: block;
-
-}
-.member {
-    display: block;
-    float: left;
+  display: block;
 }
 
-.member2 {
+  .member {
     display: block;
     float: left;
-}
+  }
 
 #extra {
-    display:block;
-    clear:left;
+  display:block;
+  clear:left;
 }
